infrastructure/gitops-ocp/ocp-tenant-governance/platform/namespaces/dev/dbank-app-01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbank-app-01-dev
  labels:
    app.kubernetes.io/name: dbank-app-01
    app.kubernetes.io/managed-by: argocd
    platform.company.io/managed-by: platform-team
    platform.company.io/application: dbank-app-01
    platform.company.io/environment: dev
    platform.company.io/domain: digital-banking
